# Automatic_emergency_brake_group2

./: .gitignore  Tasks.txt  setup_system.sh  system_launch.py
behavior_planner/: CMakeLists.txt  package.xml
behavior_planner/config/: params.yaml
behavior_planner/include/behavior_planner/: behaviorPlanner.hpp
behavior_planner/launch/: emergency.launch.py
behavior_planner/src/: behaviorPlanner.cpp
collision_detection/: CMakeLists.txt  CollisionDetectionNode.cpp  kinematic_beta.cpp  package.xml  ttc_beta.py
collision_detection/collision_detection/: CMakeLists.txt
collision_detection/collision_detection/include/collision_detection/: collision_detection.hpp
collision_detection/collision_detection/src/: test_collision_detection.cpp
collision_detection/src/: collision_detection.cpp
ctrl_long_emergency/: CMakeLists.txt  package.xml
ctrl_long_emergency/config/: params.yaml
ctrl_long_emergency/include/ctrl_long_emergency/: controlPublisher.hpp  ctrlLongEmergency.hpp
ctrl_long_emergency/launch/: ctrlLongEmergency.launch.py
ctrl_long_emergency/src/: controlPublisher.cpp  ctrlLongEmergency.cpp
doc/: Automated Emergency Brake Group2 HUN.pptx  Automated Emergency Brake.pptx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/behavior_planner/share/ament_index/resource_index/parent_prefix_path/: behavior_planner
install/behavior_planner/share/behavior_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/behavior_planner/share/behavior_planner/cmake/: behavior_plannerConfig.cmake
log/: latest_build
plan_long_emergency/: CMakeLists.txt  package.xml
plan_long_emergency/include/plan_long_emergency/: planLongEmergency.cpp
plan_long_emergency/install/: local_setup.sh  setup.sh
plan_long_emergency/install/plan_long_emergency/share/plan_long_emergency/: package.bash  package.zsh
plan_long_emergency/launch/: system_launch.py
plan_long_emergency/log/: latest_build
plan_long_emergency/src/: planLongEmergency.cpp  planLongEmergencyUpgraded.cpp
