<?xml version="1.0"?>
<package format="3">
  <name>behavior_planner</name>
  <version>0.0.0</version>
  <description>Behavior planner node</description>

  <maintainer email="nardai@todo.todo">nardai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crp_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>